	* Set the socket timeout to one minute to avoid hangs

2009-07-27 Thomas Perl <thp.io/about>
	* Catch and handle IOErrors from FTP timeouts

2009-08-01 Thomas Perl <thp.io/about>
	* Add error handling for socket timeouts (HTTP mode)

2009-08-10 Thomas Perl <thp.io/about>
	* Handle httplib errors (Debian bug 529740)
	  (Thanks to Bastian Kleineidam and Franck Joncourt)
	* urlwatch 1.8 released

2009-09-29 Thomas Perl <thp.io/about>
	* Support for shell pipe (|) in urls.txt
	* Support for If-Modified-Since header + HTTP 304
	* Show previous/current timestamp in diff output
	* Remove TODO list
	* urlwatch 1.9 released

2010-05-10 Thomas Perl <thp.io/about>
	* Get encoding from headers and convert to UTF-8
	  (suggested by Ján Ondrej)
	* urlwatch 1.10 released

2010-07-30 Thomas Perl <thp.io/about>
	* Detect non-zero shell command exit codes and raise an error
	* urlwatch 1.11 released

2011-02-10 Thomas Perl <thp.io/about>
	* Allow None as return value for filters
	  (if a filter returns None, interpret it as "don't filter")
	* Update website URL, contact info and copyright years
	* urlwatch 1.12 released

2011-08-22 Thomas Perl <thp.io/about>
	* Support for POST requests (suggested by Sébastien Fricker)
	* Use concurrent.futures for parallel execution (needs Python 3.2
	  or "futures" from PyPI for older Python versions, including 2.x)
	* Various code changes to enhance compatibility with Python 3
	* Add convert-to-python3.sh script to convert the codebase into
	  Python 3 format using the "2to3" utility included with Python
	* urlwatch 1.13 released

2011-11-15 Thomas Perl <thp.io/about>
	* Fix an encoding issue related to the html2txt module (thanks to
	  Thomas Dziedzic for reporting this issue and testing the patch)
	* urlwatch 1.14 released

2012-08-30 Thomas Perl <thp.io/about>
	* Merge changes from Slavko <slavino@slavino.sk> related to UTF-8
	  and html2txt, this has been tested on Debian-based systems
	* urlwatch 1.15 released
